`releases page in Jira
<https://jira.mongodb.org/projects/RUBY?selectedItem=com.atlassian.jira.jira-projects-plugin%3Arelease-page&status=released>`_
for the complete list of changes, including those internal to the driver and
its test suite.

2.18
====

This release of the Ruby driver supports MongoDB version 5.2.

This release includes the following new features:

- Added support for Azure Key Vault, Google Cloud Key Management, and any
  KMIP compliant Key Management System to be used as master key storage for
  client side encryption.
- The DBRef class has been moved to bson-ruby and requires bson-ruby 4.13.0
  or greater. For backwards compatibility, BSON::DBRef is aliased as Mongo::DBRef.
  The BSON::DBRef class derives from BSON::Document, unlike Mongo::DBRef which
  derived from Object. BSON::DBRef retains all fields, unlike Mongo::DBRef which
  only allowed $ref, $id, and $db. BSON::DBRef also reorders the fields if
  necessary to place $ref, $id, and $db first, in that order.
- CRUD methods, methods for listing databases, collection, and indexes management
  methods now support a new option ``comment``. This option enables users to
  specify an arbitrary comment to help trace the operation through the
  database profiler, currentOp and logs.
- Ruby Driver version 2.6.0 accidentally broke ``estimated_document_count`` on views
  by changing its implementation to use ``aggregate`` and a ``$collStats`` stage
  instead of the ``count`` command.
- Ruby Driver version 2.18.0 is fixing ``estimated_document_count`` on views by
  reverting back to using ``count`` in its implementation.
- Due to an oversight, the ``count`` command was omitted from the Stable API in
  server versions 5.0.0 - 5.0.7 and 5.1.0 - 5.3.1, so users of the Stable API
  with ``estimated_document_count`` are recommended to upgrade their MongoDB clusters
  to 5.0.8 or 5.3.2 (if on Atlas) or set ``api_strict: false`` when constructing
  their MongoClients.

2.17
====
