@@ -1,4 +1,7 @@
 {
+  "escCollection": "enxcol_.default.esc",
+  "eccCollection": "enxcol_.default.ecc",
+  "ecocCollection": "enxcol_.default.ecoc",
   "fields": [
     {
       "keyId": {
